--- a/filme-service/src/main/resources/application.yml
+++ b/filme-service/src/main/resources/application.yml
@@ -1,15 +1,34 @@
 server:
   port: 8083
   servlet: 
-    context-path: /filme-service
+    context-path: /catalogo-service
 
 spring:
   application:
-    name: filme-service
+    name: catalogo-service
   cloud:
     loadbalancer:
       ribbon:
-        enabled: false  
+        enabled: false
+           
+  datasource:
+    name: catalogodb    
+    url: jdbc:postgresql://localhost:5432/catalogo_db
+    username: postgres
+    password: postgres
+    hikari:
+      idle-timeout: 10000
+      maximum-pool-size: 60
+      minimum-idle: 20
+      pool-name: catalogodb
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQL9Dialect
+    show-sql: true
+    generate-ddl: true
+    properties:
+      hibernate: 
+        format_sql: true
+        ddl-auto: update           
 
 eureka:
   client:
@@ -17,3 +36,7 @@ eureka:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
   instance:
     preferIpAddress: true
+    
+
+  
+    
