--- a/filme-service/pom.xml
+++ b/filme-service/pom.xml
@@ -39,7 +39,7 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		
-<!-- 		<dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream</artifactId>
 		</dependency>
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
-		</dependency>	 -->			
+		</dependency>				
 		
 		<dependency>
 			<groupId>org.postgresql</groupId>
