--- a/filme-service/src/main/resources/application.yml
+++ b/filme-service/src/main/resources/application.yml
@@ -9,8 +9,16 @@ spring:
   cloud:
     loadbalancer:
       ribbon:
-        enabled: false
-           
+        enabled: false            stream:
+      default-binder: kafka
+                  bindings:        output:          
+          destination: orgChangeTopic
+          content-type: application/json
+        Kafka:
+          binder:
+            zkNodes:localhost:9092
+            brokers:localhost:29092
+      
   datasource:
     name: catalogodb    
     url: jdbc:postgresql://localhost:5432/catalogo_db
