relation application with kafka

--- a/chamado-service/src/main/resources/application.yml
+++ b/chamado-service/src/main/resources/application.yml
@@ -32,6 +32,6 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:eureka-server/eureka}
+      defaultZone: ${EUREKA_URI:eureka-server}
   instance:
     preferIpAddress: true
