--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
   kafka:
     image: confluentinc/cp-kafka:latest
     networks:
+      - app-network
       - broker-kafka
     depends_on:
       - zookeeper
@@ -91,6 +92,8 @@ services:
       context: eureka-server
       dockerfile: Dockerfile
     container_name: eureka-server
+    depends_on:
+      - kafka
     ports:
       - 8761:8761
     networks:
@@ -105,6 +108,7 @@ services:
       - 8083:8083
     depends_on:
       - eureka-server
+      - kafka
       - postgres-filme-service
     networks:
       - app-network
@@ -118,6 +122,7 @@ services:
     ports:
       - 8084:8084
     depends_on:
+      - kafka
       - eureka-server
       - postgres-chamado-service
     networks:
@@ -132,6 +137,7 @@ services:
     ports:
       - 8085:8085
     depends_on:
+      - kafka
       - eureka-server
       - postgres-usuario-service
     networks:
