--- a/usuario-service/src/main/resources/application.yml
+++ b/usuario-service/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   cloud:
     loadbalancer:
       ribbon:
-        enabled: false
+        enabled: true
     stream:
       default-binder: kafka            
       bindings:
@@ -46,3 +46,6 @@ eureka:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
   instance:
     preferIpAddress: true
+
+nome-servicos:
+   aplicacao-chamado-service: chamado-service
