--- a/chamado-service/src/main/resources/application.yml
+++ b/chamado-service/src/main/resources/application.yml
@@ -23,10 +23,11 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQL9Dialect
     show-sql: false
+    generate-ddl: true
     properties:
       hibernate: 
         format_sql: true
-        ddl-auto: update
+        ddl-auto: create
 
 
 eureka:
