ajustes no usuário

--- a/usuario-service/src/main/resources/application.yml
+++ b/usuario-service/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
           group: output-group-1        
           content-type: application/json 
         input1:
-          destination: topico.chamado
+          destination: topico.chamadoUsuario
           group: output-group-2        
           content-type: application/json        
         Kafka:
