--- a/usuario-service/src/main/resources/application.yml
+++ b/usuario-service/src/main/resources/application.yml
@@ -52,4 +52,4 @@ eureka:
     preferIpAddress: true
 
 nome-servicos:
-   aplicacao-chamado-service: chamado-service
+   aplicacao-chamado-service: CHAMADO-SERVICE
