--- a/chamado-service/src/main/resources/application.yml
+++ b/chamado-service/src/main/resources/application.yml
@@ -44,6 +44,6 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://eureka_server/eureka}
+      defaultZone: ${EUREKA_URI:http://eureka-server:8761/eureka}
   instance:
     preferIpAddress: true
