--- a/usuario-service/src/main/resources/application.yml
+++ b/usuario-service/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
           content-type: application/json        
         Kafka:
           binder:
-            zkNodes:kafka
+            zkNodes:kafka:9092
             brokers:kafka:29092          
   datasource:
     name: usuariodb    
